[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NV_Simulator"
version = "0.1.0"
description = "Nine-level NV center simulator (electron spin-1 + nitrogen spin-1)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["NV_Simulator*"]

